--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "public-lumina-bot",
-  "version": "1.1.0",
+  "name": "lumina-bot-master",
+  "version": "1.3.0-beta",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "deploy": "node deploy-commands.js",
+    "deploy": "cross-env NODE_NO_WARNINGS=1 node deploy-commands.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -29,12 +29,19 @@
     "ffmpeg-static": "^5.2.0",
     "install": "^0.13.0",
     "libsodium-wrappers": "^0.7.14",
+    "moment-timezone": "^0.5.45",
+    "mongoose": "^8.7.0",
+    "mysql2": "^3.11.3",
     "npm": "^10.8.2",
     "public-ip": "^4.0.4",
+    "sequelize": "^6.37.3",
     "sodium-native": "^4.1.1",
     "utf-8-validate": "^6.0.4"
   },
   "engines": {
     "node": "20.9.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
